BUGFIX: Affichage hike-creation small screen

--- a/Arsoude-Client/src/app/pages/hike-creation/hike-creation.component.css
+++ b/Arsoude-Client/src/app/pages/hike-creation/hike-creation.component.css
@@ -253,15 +253,17 @@ mat-form-field.mat-focused .mat-form-field-label {
 
   
   .form-container {
-    background-color: #193D2A;
+     background-color: #193D2A;
     height: 100%;
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: auto;
-    max-height: 90vh; 
+    overflow-y:visible;
+    flex-grow: 1;
   }
+
+  
   
  
 
